# main-practic

./: .gitignore  CMakeLists.txt
classes/: counter.cpp  counter.h  drawshape.h  quadrilaterals.cpp  quadrilaterals.h  triangles.cpp  triangles.h
functions/: mymath.cpp  mymath.h
src/: 1.cpp  3.cpp  common.h  main2.cpp
src/OOP_abstraction_incapsulation/: 31.cpp  32.cpp
src/OOP_inheritance_and_polymorphism/: 41.cpp  42.cpp  43.cpp
src/algoritms/: fibonacci.cpp  heap_print.cpp  heap_travel.cpp
src/class_and_objects/: 21.cpp  22.cpp
src/enum_and_structs/: 11.cpp  12.cpp  13.cpp
src/errors/: 71.cpp  72.cpp
src/many_files_projects/: 51.cpp  52.cpp  53.cpp
src/operators/: 81.cpp  82.cpp
src/preprocessor_n_macros/: 61.cpp  62.cpp
txt_files/: algoritms  in.txt  out.txt
